--- a/package.json
+++ b/package.json
@@ -65,5 +65,13 @@
     "@loopback/eslint-config": "^13.0.2",
     "eslint": "^8.19.0",
     "typescript": "~4.7.4"
+  },
+  "nodemonConfig": {
+    "verbose": true,
+    "watch": [
+      "src/"
+    ],
+    "ext": "ts",
+    "exec": "npm start"
   }
 }
