added project to rabbitmq network

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       - .:/home/node/app
     networks:
       - app-network
+      - rabbitmq_micro
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.5.1
@@ -37,3 +38,5 @@ services:
 networks:
   app-network:
     driver: bridge
+  rabbitmq_micro:
+    external: true
