--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@loopback/rest": "^12.0.2",
     "@loopback/rest-explorer": "^5.0.2",
     "@loopback/service-proxy": "^5.0.2",
+    "@types/amqplib": "^0.8.2",
+    "amqplib": "^0.10.2",
     "dotenv": "^16.0.1",
     "loopback-connector-esv6": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
     "tslib": "^2.0.0"
