--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:7.5.1
     container_name: micro-node-kibana
+    environment:
+      - ELASTICSEARCH_URL=http://micro-node-elasticsearch:9200
     ports:
       - 5601:5601
     networks:
