--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 DEBUG=elasticsearch,loopback:connector:elasticsearch,loopback:core:application
 APP_ENV=dev
-ELASTIC_SEARCH_HOST=http://elasticsearch:9200
+ELASTIC_SEARCH_HOST=http://micro-node-elasticsearch:9200
 ELASTIC_SEARCH_REQUEST_TIMEOUT=30000
 ELASTIC_SEARCH_PING_TIMEOUT=3000
+
+RABBITMQ_URI=apqm://admin:admin@rabbitmq:5672
