--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "@loopback/rest": "^12.0.2",
     "@loopback/rest-explorer": "^5.0.2",
     "@loopback/service-proxy": "^5.0.2",
-    "@types/amqplib": "^0.8.2",
-    "amqplib": "^0.10.2",
+    "@types/amqp-connection-manager": "^3.4.1",
+    "@types/amqplib": "^0.5.6",
+    "amqp-connection-manager": "^4.1.11",
+    "amqplib": "^0.5.6",
     "dotenv": "^16.0.1",
     "loopback-connector-esv6": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
     "tslib": "^2.0.0"
