--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "@loopback/service-proxy": "^5.0.2",
     "@types/amqp-connection-manager": "^3.4.1",
     "@types/amqplib": "^0.5.6",
+    "@types/lodash": "^4.14.191",
     "amqp-connection-manager": "^4.1.11",
     "amqplib": "^0.5.6",
     "dotenv": "^16.0.1",
+    "lodash": "^4.17.21",
     "loopback-connector-esv6": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
     "tslib": "^2.0.0"
   },
