--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ ELASTIC_SEARCH_REQUEST_TIMEOUT=30000
 ELASTIC_SEARCH_PING_TIMEOUT=3000
 
 RABBITMQ_URI=apqm://admin:admin@rabbitmq:5672
+RABBITMQ_HANDLER_ERROR=0
